syntax = "proto3";

package meteroid.api.addons.v1;

import "api/addons/v1/models.proto";
import "api/pricecomponents/v1/models.proto";
import "common/v1/pagination.proto";

message ListAddOnRequest {
  optional string search = 1;
  meteroid.common.v1.Pagination pagination = 2;
}

message ListAddOnResponse {
  repeated AddOn add_ons = 1;
  meteroid.common.v1.PaginationResponse pagination_meta = 2;
}

message CreateAddOnRequest {
  string name = 2;
  meteroid.api.components.v1.Fee fee = 3;
}

message CreateAddOnResponse {
  AddOn add_on = 1;
}

message RemoveAddOnRequest {
  string add_on_id = 1;
}

message RemoveAddOnResponse {}

message EditAddOnRequest {
  AddOn add_on = 1;
}

message EditAddOnResponse {
  AddOn add_on = 1;
}

service AddOnsService {
  rpc ListAddOns(ListAddOnRequest) returns (ListAddOnResponse) {}
  rpc CreateAddOn(CreateAddOnRequest) returns (CreateAddOnResponse) {}
  rpc RemoveAddOn(RemoveAddOnRequest) returns (RemoveAddOnResponse) {}
  rpc EditAddOn(EditAddOnRequest) returns (EditAddOnResponse) {}
}
